force-app/main/default/objects/EmailTemplateConfiguration__mdt/EmailTemplateConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Email Template Configuration</label>
    <pluralLabel>Email Template Configuration</pluralLabel>
</CustomObject>