force-app/main/default/objects/EmailTemplateConfiguration__mdt/fields/FieldToUpdate__c.field-meta.xml
<CustomField>
    <fullName>FieldToUpdate__c</fullName>
    <label>Field To Update</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>