force-app/main/default/objects/EmailTemplateConfiguration__mdt/fields/Is_Related_to_Who_ID__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_to_Who_ID__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related to Who ID</label>
    <type>Checkbox</type>
</CustomField>